update path to image

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="container">
 		<div class="container__image">
-			<img src="images/heart.png" alt="Icons around the heart">
+			<img src="/images/heart.png" alt="Icons around the heart">
 		</div>
 		<div class="container__steps">
 			<div class="container__steps__title">How to <br> Participate</div>
