--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 		<div class="modal__overlay"></div>
 		<div class="modal__content">
 			<button class="modal__close" id="modalClose">&times;</button>
-			<div class="modal__header">
+			<div class="modal__header" id="modalHeader">
 				<h2 class="modal__title">To register, enter the mail to which our
 					news is sent and set your password</h2>
 			</div>
